[workspace]
resolver = "2"
members = [
    "virtio-bindings",
    "virtio-blk",
    "virtio-console",
    "virtio-device",
    "virtio-queue",
    "virtio-queue-ser",
    "virtio-vsock",
]

[profile.bench]
lto = true
codegen-units = 1

[workspace.dependencies]
vm-memory = { git = "https://github.com/rust-vmm/vm-memory", rev = "b2eaf989de2c3b9146ea7625250472501cd793fd" }
vmm-sys-util = "0.14.0"
